# teenmodo

./: .gitignore  LICENSE  README.md  pyproject.toml
controller/: huggingface.py
docs/: ADDING_ENGINE.md  ADDING_PIPER_TTS.md  ADDING_STABLE_DIFFUSION_CPP.md  API.md  ARCHITECTURE.md  CLI.md  COMMANDS.md  ERRORS.md  EXTENDING.md  FEATURES.md  FILES.md  GETTING_STARTED.md  JOBS.md  MODELS.md  OLLAMA_DIRECT_MODELS.md  PLATFORMS.md  PRODUCT.md  QUICKSTART.md  README.md  RELEASE_0.2.1.md  RELEASE_0.2.2.md  RELEASE_0.2.3.md  RELEASE_0.3.0.md  RELEASE_0.3.1.md  RELEASE_0.3.2.md  RELEASE_0.3.3.md  RELEASE_0.4.0.md  RELEASE_0.4.1_OLLAMA.md  RESULTITY.md  RESULTS.md  ROADMAP.md  TESTING.md  TROUBLESHOOTING.md  UPGRADE.md
engines/diffusers/: adapter.py
engines/whisper_cpp/: adapter.py
teenmodo/: config.py
